Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-3181

Compilation manager queue may have too many tasks

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.13.0
    • codegen
    • None

    Description

      When a client frequently scanning for thousands of diffrent columns, the code_cache_hits rate is quite low. Then compilation task is frequently submitted to queue, but the compiler manager thread cannot consumes the queue quick enough. The queue could accumulate tons of entries, each of which retains a copy of schema meta data, so a lot of memeory is consumed for a long time.

      Attachments

        1. heap.svg
          107 kB
          Li Zhiming

        Activity

          People

            Unassigned Unassigned
            lizhiming Li Zhiming
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: