KUDU-3181: put a bound on the queue of compilation manager

Add flag codegen_queue_capacity to config max queue size.
Without the bound, when codegen cache hit rate is low, the queue
could accumulate tons of entries, each of which retains
a copy of schema meta data, thus consuming a lot of memeory.

Change-Id: Ia85b5818d1a5ea3ea978808900dd9c9e0cc0784e
Reviewed-on: http://gerrit.cloudera.org:8080/16330
Reviewed-by: Andrew Wong <awong@cloudera.com>
Tested-by: Andrew Wong <awong@cloudera.com>
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>